reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__epistemics__projection.rs_line_563_col_9.log

*** crates/tracewake-core/src/epistemics/projection.rs:563:9: replace EpistemicProjection::debug_epistemics_view -> DebugEpistemicsView with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/epistemics/projection.rs
+++ replace EpistemicProjection::debug_epistemics_view -> DebugEpistemicsView with Default::default()
@@ -555,52 +555,17 @@
                     current_place_record,
                     latest_current_place_record,
                 }
             })
             .collect()
     }
 
     pub fn debug_epistemics_view(&self) -> DebugEpistemicsView {
-        let observations = self
-            .observations_by_id
-            .values()
-            .map(debug_observation_entry)
-            .collect();
-        let contradictions = self
-            .contradictions_by_id
-            .values()
-            .map(debug_contradiction_entry)
-            .collect();
-        let beliefs_by_holder = self
-            .beliefs_by_holder
-            .iter()
-            .map(|(holder_actor_id, belief_ids)| DebugHolderBeliefs {
-                holder_actor_id: holder_actor_id.clone(),
-                beliefs: belief_ids
-                    .iter()
-                    .filter_map(|belief_id| self.beliefs_by_id.get(belief_id))
-                    .map(debug_belief_entry)
-                    .collect(),
-            })
-            .collect();
-        let checksum = self.compute_checksum().checksum;
-
-        DebugEpistemicsView::new(
-            "debug",
-            observations,
-            beliefs_by_holder,
-            contradictions,
-            Vec::new(),
-            format!(
-                "{} checksum={}",
-                self.projection_version.as_str(),
-                checksum.as_str()
-            ),
-        )
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     pub fn debug_beliefs_view(&self, actor_id: ActorId) -> DebugBeliefsView {
         let beliefs = self
             .beliefs_by_holder
             .get(&actor_id)
             .into_iter()
             .flat_map(|ids| ids.iter())


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/epistemics/projection.rs` has changed (1781909425.007924379s, 4s after last build at 1781909421.747924386s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused import: `DebugHolderBeliefs`
  --> crates/tracewake-core/src/epistemics/projection.rs:16:5
   |
16 |     DebugHolderBeliefs, DebugObservationEntry, DebugObservationsView,
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `DebugEpistemicsView: Default` is not satisfied
   --> crates/tracewake-core/src/epistemics/projection.rs:563:9
    |
563 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `DebugEpistemicsView`
   --> crates/tracewake-core/src/view_models.rs:450:1
    |
450 | pub struct DebugEpistemicsView {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 1 warning
error: could not compile `tracewake-core` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `view_models::DebugEpistemicsView: Default` is not satisfied
   --> crates/tracewake-core/src/epistemics/projection.rs:563:9
    |
563 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `view_models::DebugEpistemicsView`
   --> crates/tracewake-core/src/view_models.rs:450:1
    |
450 | pub struct DebugEpistemicsView {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: `tracewake-core` (lib test) generated 1 warning (1 duplicate)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
